<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="-1dp"
    tools:layout_editor_absoluteY="15dp">

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="90dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="408dp"
        android:layout_height="340dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/heavyAttackBTN"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginBottom="2dp"
            android:text="@string/heavyAttackBTN" />

        <Button
            android:id="@+id/lightAttackBTN"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginBottom="2dp"
            android:text="@string/lightAttackBTN" />

        <Button
            android:id="@+id/petBTN"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginBottom="2dp"
            android:text="@string/petBTN" />

        <Button
            android:id="@+id/invBTN"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginBottom="2dp"
            android:text="@string/invBTN" />

        <Button
            android:id="@+id/fleeBTN"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginBottom="2dp"
            android:text="@string/fleeBTN" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="404dp"
        android:layout_height="118dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/dialogueText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/dialogueText" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>